package Tributaveis.src.main.org.dei.tributaveis;

public interface Cores {

    String AZUL = "azul";
    String CINZENTO = "cinzento";
    String ENCARNADO = "encarnado";
    String VERDE = "verde";
}
