package Tributaveis.src.main.org.dei.tributaveis;

public interface Tributavel {
    double calcularImposto();
}
